# priv-band-ai

./: .env.example  .gitignore  README.md  TODO  log_scripts.py  peek_queue.py  project_setup.txt  pyproject.toml  quick_start.sh  requirements.txt  setup.py  start.bat  test.py
README/: COMPATIBILITY_REPORT.md  ERROR_HANDLING_FIX.md  README_2.md  STAGE_REFACTORING.md  cache_layers_guide.md  gemini_add.md  logging_docs.md  logging_update_summary.md  project_summary.md  readme_file.md  redis_installation_guide.md  security_guide.md  security_summary.md  stage4_guide.md  stage4_summary.md
README/Fault_Tolerent/: Integration Guide - Fault Tolerance Modules.md
README/Migrate to mongo and rabbitmq/: changes_summary.md  migration_guide.md  rabbitmq_migration_guide.md  rabbitmq_quick_ref.md  redis_vs_rabbitmq.md
README/celery_integration/: migration_guide.md  quick_reference.md  startup_guide.md
TO-ADD/: enhanced_app_js.js  enhanced_celery_tasks.py  enhanced_error_styles.css  enhanced_task_monitor.js  implementation_guide.md  quick_start_guide.md
app/: __init__.py  celery_beat.py  celery_worker.py  config.py  logger.py  main.py  middleware.py  models.py  safeguards.py
app/api/: analyze.py
app/celery_app/: __init__.py  asyncio_runner.py  celery.py  signals.py  tasks.py
app/prompts/: __init__.py  compliance_analyzer.py  compliance_rules.py  policy_generator.py  policy_matcher.py  system_prompt.py
app/services/: __init__.py  analyzer_service.py  error_handler.py  graceful_degradation.py  idempotency_service.py  mongodb_client.py  openai_service.py  provider_manager.py  quota_tracker.py
app/utils/: __init__.py  monitoring_dashboard.py  (+4 more)
templates/: index.html
tests/: __init__.py  test_api.py  test_pipeline.py
(+20 files in other folders)
